<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_install">App Install</string>
    <string name="app_name_encrypt">Encrypt</string>
    <string name="app_name_decrypt">Decrypt</string>
    <string name="app_help">Help</string>
    <string name="ask_no_use">Do you want to disable this user\'s activity(encryption/decryption)?</string>
    <string name="ask_use">Do you want to enable this user\'s activity?</string>
    <string name="banned_list">Banned Phones List</string>
    <string name="cancel">Cancel</string>
    <string name="choose_default">Step 2: Choose Default Keyboard</string>
    <string name="clip_text_type">Text</string>
    <string name="clip_image_type">Image</string>
    <string name="clip_monitor_service">MyClips Clipboard Monitor</string>
    <string name="close">Close</string>
    <string name="common_key">Common Key</string>
    <string name="contacts_list">Contacts List</string>
    <string name="context_info">Info</string>
    <string name="context_delete_clip">Delete</string>
    <string name="context_email_clip">Email</string>
    <string name="copy">Copy</string>
    <string name="create_new_clipboard">New clipboard</string>
    <string name="delete_clipboard">Delete clipboard</string>
    <string name="decrypt_copy">Copy of decrypted text</string>
    <string name="decrypt_copy_yes">Allow</string>
    <string name="decrypt_copy_no">Don\'t allow</string>
    <string name="decrypted_text">Decrypted Text</string>
    <string name="decrypt_hours_other1">Sent %s ago.</string>
    <string name="decrypt_hours_other2">Decrypt impossible after %s.</string>
    <string name="decrypt_key">Decrypt Key</string>
    <string name="decrypt_method_help">When you send encrypted message, following sentence of decrypting method can be attached.\nIf your friend does not know Hush, this attaching method can be useful.</string>
    <string name="decrypt_method">\nHow to decrypt above sentence : \n1) install app( %s )\n2)execute the app and finish\n3)press this sentence and copy</string>
    <string name="decrypt_method_warning">If you select ON, some help message to decrypt will be attached after common-key-encrypted message. Will you select \'ON\'?</string>
    <string name="decrypt_time_out">Could not decrypt message because of time-out(24 hours from sending).</string>
    <string name="decrypt_preparing">Decrypt Preparing ...</string>
    <string name="detail_list">%s Select Contacts</string>
    <string name="email_clipboard">Email clipboard</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_for_send">For Send</string>
    <string name="encrypt_for_save">For Save</string>
    <string name="encrypt_down">Encrypt ↓</string>
    <string name="encrypt_copy">Encrypt and Copy</string>
    <string name="encrypt_go">Goto Encrypt Screen</string>
    <string name="encrypt_share">Encrypt and Share</string>
    <string name="encrypt_help1">※ Encrypted message for send can be decrypted within only 24 hours.</string>
    <string name="encrypt_help2">※ Encrypted message for save cannot be decrypted by others.</string>
    <string name="encrypt_key">Encrypt Key</string>
    <string name="encrypt_method">Encrypt Method</string>
    <string name="encrypt_method_select">Select Encrypt Method</string>
    <string name="encrypt_method_copy_title">Copy Method</string>
    <string name="encrypt_method_kbd_title">Kbd Method</string>
    <string name="encrypt_method_all_title">All Method</string>
    <string name="encrypt_method_copy">Copy Method : encrypt when copied or cut</string>
    <string name="encrypt_method_kbd">Keyboard Method : encrypt with %s Keyboard</string>
    <string name="encrypt_method_all">Copy+Keyboard Method : use two methods together</string>
    <string name="encrypt_method_recommend">Recommend Encrypt Method</string>
    <string name="encrypt_method_kbd_ask">If you set kbd > encrypt method ON, you can encrypt text more conveniently. </string>
    <string name="encrypt_method_yes">Yes</string>
    <string name="encrypt_method_no">No</string>
    <string name="encrypt_method_again">Don\'t ask</string>
    <string name="encrypt_preparing">Encrypt Preparing ...</string>
    <string name="encrypt_window">Encrypt Window</string>
    <string name="encrypt_when_copy">Encrypt when text copied</string>
    <string name="encrypt_when_guide_off">Copy > Encrypt = OFF. Touch Hush Notification to encrypt copied text.</string>
    <string name="encrypt_when_guide_on">Copy > Encrypt = ON. Encrypt screen will be displayed when you copy text.</string>
    <string name="err_empty">Cannot decrypt message of which the key valid period has been passed.</string>
    <string name="err_empty_user">Cannot decrypt message which was decrypted with previous save key.</string>
    <string name="err_title">Error Occurred!</string>
    <string name="err_invalid_otg">Otg Guard is not attached or invalid otg.</string>
    <string name="err_phone_lost">This phone is registered as a lost phone.</string>
    <string name="err_other_group">Can not encrypt or decrypt other group message.</string>
    <string name="err_other_user">Cannot decrypt message encrypted by other person.</string>
    <string name="err_group_otg_must">To encrypt or decrypt this group message, OTG Guard must be equipped.</string>
    <string name="err_password_wrong">Password incorrect for save key. Error Count=</string>
    <string name="finished">Congratulations! You have done keyboard setting successfully! \n\nYou can use worklock Keyboard and Securing Messages.</string>
    <string name="first_welcome">Welcome!</string>
    <string name="first_login_ask">Are you already a member of one of Hush series apps?</string>
    <string name="first_regist_ask">Is this your first time to use one of Hush series apps?</string>
    <string name="first_login">User Login</string>
    <string name="first_regist">User Regist</string>
    <string name="first_kbd_ask">Press \'KBD > Encrypt\' (Circle) button, you can encrypt text directly from the KBD. </string>
    <string name="general_category">General</string>
    <string name="gettingNotAssigned">Getting Not Assigned Contacts ...</string>
    <string name="group_delete">Delete Group</string>
    <string name="group_delete_ask">After deleting group, all group informations includeing group members will be deleted from the server. Will you delete?</string>
    <string name="group_exist">Group Registration Failed! Same Group Already Exist.</string>
    <string name="group_id">Group Name</string>
    <string name="group_id_hint">2~10 Alphanumeric Characters</string>
    <string name="group_list">Group List</string>
    <string name="group_modify">Modify Group</string>
    <string name="group_modify_ask">Do you want to modify group info?</string>
    <string name="group_no">Common Key</string>
    <string name="group_not_modified">Group Info has not been modied.</string>
    <string name="group_pw">Group Pw</string>
    <string name="group_pw_wrong">Wrong Password!</string>
    <string name="group_pw_over">>=3 Times Diffenrent Password!</string>
    <string name="group_pw_hint">5~15 Alphanumeric Characters</string>
    <string name="group_select">Select Group</string>
    <string name="group_select_button">Encrypt:%s</string>
    <string name="group_regist">Regist New Group</string>
    <string name="group_regist_ask">Do you want to regist group ?</string>
    <string name="group_regist_help">After sending group encrypted message to your friend, if you let him know group password, he can enter group and decrypt the message.</string>
    <string name="group_regist_success">Regist Group Succeeded.</string>
    <string name="group_regist_fail">Regist Group Failed!</string>
    <string name="group_regist_idch_err">Group Name should be between 2~10 characters.</string>
    <string name="group_regist_pwch_err">Group Pw should be between 5~15 characters.</string>
    <string name="group_regist_user_name_err">Register Name should be longer than 1 char.</string>
    <string name="group_register_name">Register Name</string>
    <string name="hours">Hours </string>
    <string name="kbd_setting">Keyboard Setting</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="language_selection_title">Input languages</string>
    <string name="list_all_clipboards">List all clipboards</string>
    <string name="login">Login</string>
    <string name="login_password_err">Wrong Password! Please input again.</string>
    <string name="login_user_success">User Login Success!</string>
    <string name="login_user_fail">User Login Failed!</string>
    <string name="lock_help">Locked state. Please touch a lock on the top bar to unlock the app.</string>
    <string name="lock_state_locked">Locked State. It is impossible to encrypt or decrypt messages.</string>
    <string name="main_title">worklock Keyboard</string>
    <string name="main_content_copy">Hush! provides method to encrypt or decrypt SNS messages when you copy part or all of the messages. \n\nEncrypt : \nSelect text -> Cut -> Popup worklockCopy screen -> Encrypt and copy -> Paste at cut position\n\nDecrypt : \nSelect encrypted text -> Copy -> Popup decrypted text </string>
    <string name="main_content_kbd">HushKbd Settings can be done with following 2 steps. \n\nDuring the process, Android OS warns that HushKbd can collect personal data including credit card numbers. \n\nBut you can use this app safely because HushKbd does not collect any data you typed with HushKbd. </string>
    <string name="member_delete_ask">Do you want to delete this member(%s)?</string>
    <string name="member_help"></string>
    <string name="member_invite_ask">There is an invitation from group(manager) %s . If you agree to join, you can encrypt or decrypt this group messages.\n\nAgree to Join?</string>
    <string name="member_join">Join Group</string>
    <string name="member_join_ask">If you enter this group password correctly, you can decrypt encrypted group messages.</string>
    <string name="member_join_success">Group Join Succeeded.</string>
    <string name="member_join_fail">Group Join Failed!</string>
    <string name="member_join_over">Too many password error!</string>
    <string name="member_list">Member List</string>
    <string name="member_make">Member Regist</string>
    <string name="member_make_help">You can regist group members one by one on this dialog.</string>
    <string name="member_make_file">Regist from File</string>
    <string name="member_make_file_help">File format should be csv(csv format saved in excel) or text file which has name,mobile phone number(separated with \',\').</string>
    <string name="member_make_wrong">Input is wrong.</string>
    <string name="member_nm">Member Name</string>
    <string name="member_no">Member Mobile Phone</string>
    <string name="member_op_ask">What operation do you want for this member?</string>
    <string name="member_op_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="regist_male">Male</string>
    <string name="regist_female">Female</string>
    <string name="regist_birth_year">Birth Year</string>
    <string name="share_help">When you send encrypted message, Next sentence can be attached after the encrypted message.</string>
    <string name="share_attach_ok">Yes, attach it please.</string>
    <string name="share_attach_no">No, don\'t attach.</string>
    <string name="time_out_title">Set time out value of auto lock</string>
    <string name="time_out_help">After time out, user should enter password again.</string>
    <string name="my_info">My Info</string>
    <string name="info_change">Change Info</string>
    <string name="my_name">My (Nick) Name</string>
</resources>