<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="100"
    android:background="@drawable/backgnd"
     >
  
  <!-- group id -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
        <TextView
            android:id="@+id/tv_share_help"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="20"
            android:gravity="left|center_vertical"
            android:text="@string/share_help"
            android:textSize="18sp"
            android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_share_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="30"
        android:gravity="left|center_vertical"
        android:text="sample attach message"
        android:textSize="18sp"
        android:textColor="#1ca6e3" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    
       <RadioButton
           android:id="@+id/rbtn_1"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="8"
           android:textSize="18sp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:onClick="rbtn_1_pressed"
            android:textColor="#000000"
           android:text="@string/share_attach_ok" />
            
       <RadioButton
           android:id="@+id/rbtn_2"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="8"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:textSize="18sp"
           android:onClick="rbtn_2_pressed"
            android:textColor="#000000"
           android:text="@string/share_attach_no" />
            

</LinearLayout>
