<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="100"
    android:background="@drawable/backgnd"
     >
  
  <!-- title  -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_my_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/my_info"
        android:textSize="16sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_weight="8"
        android:weightSum="10"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/tv_my_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:gravity="right|center_vertical"
            android:text="@string/my_name"
            android:textSize="12sp"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_weight="5"
            android:weightSum="10"
            android:layout_marginLeft ="10dp"
            android:layout_marginRight ="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:padding="0dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <ImageView
                    android:layout_marginTop ="0dp"
                    android:layout_marginLeft ="10dp"
                    android:layout_marginRight ="10dp"
                    android:layout_marginBottom ="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/text_box" />

                <EditText
                    android:id="@+id/et_my_name"
                    android:layout_marginTop ="5dp"
                    android:layout_marginLeft ="15dp"
                    android:layout_marginRight ="15dp"
                    android:layout_marginBottom ="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:textSize="25sp"
                    android:inputType = "text"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_weight="8"
        android:weightSum="10"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

    <TextView
        android:id="@+id/tv_regist_birth_year"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="right|center_vertical"
        android:text="@string/regist_birth_year"
        android:textSize="12sp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_weight="5"
        android:weightSum="10"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:layout_width="0dp"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_marginTop ="0dp"
                android:layout_marginLeft ="10dp"
                android:layout_marginRight ="10dp"
                android:layout_marginBottom ="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/text_box" />

            <EditText
                android:id="@+id/et_birth_year"
                android:layout_marginTop ="5dp"
                android:layout_marginLeft ="15dp"
                android:layout_marginRight ="15dp"
                android:layout_marginBottom ="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:textSize="25sp"
                android:inputType = "number"
                />

        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioButton
        android:id="@+id/rbtn_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft ="130dp"
        android:layout_marginRight ="130dp"
        android:textSize="17sp"
        android:onClick="rbtn_1_pressed"
        android:textColor="#000000"
        android:text="@string/regist_male" />

    <RadioButton
        android:id="@+id/rbtn_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft ="130dp"
        android:layout_marginRight ="130dp"
        android:textSize="17sp"
        android:onClick="rbtn_2_pressed"
        android:textColor="#000000"
        android:text="@string/regist_female" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#1ca5e4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
          android:layout_weight="10"
          android:weightSum="10" 
          android:layout_width="match_parent"
          android:layout_height="0dp" >
    
         <Button
	           android:id="@+id/btn_change"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="10"
                android:layout_marginTop ="2dp" 
                android:layout_marginBottom ="2dp" 
                android:layout_marginLeft ="10dp"
                android:layout_marginRight ="10dp"
              android:background="@drawable/bottom_menu_button"
              android:onClick="change_info_pressed"
             android:textColor="#ffffff"
                android:textSize="18sp"
	           android:text="@string/info_change" />
        

    </LinearLayout>	   

</LinearLayout>
